<resources>
    <string name="app_name">Asclepius</string>
    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Pick photo from gallery</string>
    <string name="analyze">Analyze</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image classifier failed to initialize. See error logs for details</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_articles">Articles</string>
    <string name="title_scan">Scan Cancer</string>
    <string name="title_history">History</string>
    <string name="articles_title">Articles Title</string>
    <string name="articles_description">Articles Description Articles Description</string>
    <string name="confidence">Confidence Score\n%s</string>
    <string name="confidenceS">Confidence Score: %s</string>
    <string name="noData">No Data</string>
    <string name="results">Results</string>
</resources>